Change styles for form errors to prevent layout issues.
Overlap error on input field to avoid extra span breaking column
layouts.

--- a/app/assets/stylesheets/screen.css.scss
+++ b/app/assets/stylesheets/screen.css.scss
@@ -378,6 +378,11 @@ form {
     font-size: 0.75em;
     font-style: italic;
     color: #e46b66;
+
+    margin-top: -17px;
+    display: block;
+    padding-bottom: 5px;
+
   }
 
 }
